--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,9 +1,21 @@
 <img src"{{ album.album_logo }}">
 <h1>{{ album.album_title }}</h1>
-<h3>{{ album.artist }}</h3>
+<h2>{{ album.artist }}</h2>
 
-<ul>
+{%  if error_message %}
+    <p><strong>{{ error_message }}</strong></p>
+{%  endif %}
+
+<form action="{% url 'music:favorite' album.id %}" method="post">
+    {%  csrf_token %}
     {%  for song in album.song_set.all %}
-        <li>{{ song.song_title }} - {{ song.file_type }}</li>
+        <input type="radio" id="song{{ forloop.counter }}" name="song" value="{{ song.id }}"/>
+        <label for="song{{ forloop.counter }}">
+        {{ song.song_title }}
+        {%  if song.is_favorite %}
+        {%  endif %}
+            <img src="https://media.istockphoto.com/photos/golden-star-picture-id477561906?k=6&m=477561906&s=612x612&w=0&h=CPJYYbDfLedj9YIR_UoAHv4Lq5tnDnQ4YtSjcPzcoRw="
+        </label><br>
     {% endfor %}
-</ul>.
+    <input type="submit" value="Favorite">
+</form>
