--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -1,21 +1,16 @@
-<img src"{{ album.album_logo }}">
-<h1>{{ album.album_title }}</h1>
-<h2>{{ album.artist }}</h2>
+{% extends 'music/base.html' %}
+{% block title %}Album Details{% endblock %}
 
-{%  if error_message %}
-    <p><strong>{{ error_message }}</strong></p>
-{%  endif %}
+{% block body %}
+    <img src="{{ album.album_logo }}" style="width: 250px;">
+    <h1>{{ album.album_title }}</h1>
+    <h2>{{ ablum.artist }}</h2>
 
-<form action="{% url 'music:favorite' album.id %}" method="post">
-    {%  csrf_token %}
-    {%  for song in album.song_set.all %}
-        <input type="radio" id="song{{ forloop.counter }}" name="song" value="{{ song.id }}"/>
-        <label for="song{{ forloop.counter }}">
+    {% for song in album.song_set.all %}
         {{ song.song_title }}
-        {%  if song.is_favorite %}
-        {%  endif %}
-            <img src="https://media.istockphoto.com/photos/golden-star-picture-id477561906?k=6&m=477561906&s=612x612&w=0&h=CPJYYbDfLedj9YIR_UoAHv4Lq5tnDnQ4YtSjcPzcoRw="
-        </label><br>
+        {% if song.is_favorite %}
+              <img src="https://media.istockphoto.com/photos/golden-star-picture-id477561906?k=6&m=477561906&s=612x612&w=0&h=CPJYYbDfLedj9YIR_UoAHv4Lq5tnDnQ4YtSjcPzcoRw="/>
+        {% endif %}
+        <br>
     {% endfor %}
-    <input type="submit" value="Favorite">
-</form>
+{% endblock %}
